# ats-tracking-system

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
cli/: Cargo.toml
cli/src/: command_line.rs  main.rs
gui/: Cargo.toml  build.rs
gui/src/: callback_handlers.rs  controller.rs  main.rs  model.rs  slint_generated.rs
gui/ui/: app.slint
gui/view/: app.slint  delete_confirmation.slint  functions.slint  models.slint
gui/view/components/: search_bar.slint  sidebar.slint  table.slint
repository/: Cargo.toml
repository/src/: job_application_model.rs  job_application_repository.rs  lib.rs
repository/src/job_application_model/: mysql_backend.rs  sqlite_backend.rs
repository/src/job_application_repository/: mysql_backend.rs  sqlite_backend.rs
repository/src/resources/: sqlite_table_definition.sql
repository/src/tests/: sqlite_tests.rs
repository/tests/: sqlite_tests.rs
setup_scripts/: db_config.sql
src/: main.rs  repository.rs  user_interface.rs
src/repository/: job_application_model.rs  job_application_repository.rs
src/user_interface/: command_line.rs  shell_option.rs
