[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ats-tracking-cli"
path = "src/main.rs"

[dependencies]
repository = { path = "../repository" }
dotenv = "0.15.0"
opener = "0.7.2"
tempfile = "3.12.0"
time = { version = "0.3.36", features = ["default", "local-offset", "macros", "parsing"] }
