[package]
name = "gui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ats-tracking"
path = "src/main.rs"

[dependencies]
repository = { path = "../repository" }
mysql = "25.0.1"
time = { version = "0.3.36", features = ["default", "local-offset", "macros", "parsing"] }
slint = "1.8.0"
dotenv = "0.15.0"

[build-dependencies]
slint-build = "1.8.0"
