[package]
name = "gui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ats-tracking"
path = "src/main.rs"

[dependencies]
repository = { path = "../repository" }
time = { version = "0.3.36", features = ["default", "local-offset", "macros", "parsing"] }
# A bug in version 1.9.0 and 1.9.1 causes the date picker widget to never close.
slint = "1.9.2"
dotenv = "0.15.0"

[build-dependencies]
slint-build = "1.9.2"
