[package]
name = "repository"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
mysql = ["dep:mysql"]

[dependencies]
mysql = { version = "26.0.0", features = ["default", "time"], optional = true }
time = { version = "0.3.36", features = ["default", "local-offset", "macros", "parsing"] }
rusqlite = { version = "0.34.0", features = ["bundled", "time"] }

[dev-dependencies]
tempfile = "3.15.0"
